# aof-rs

./: .travis.yml  Cargo.toml  README.md  snapcraft.yaml
src/: filter.rs  main.rs
