[package]
authors = ["messense <messense@icloud.com>"]
description = "Redis appendonly file filter"
keywords = ["Redis", "appendonly"]
license = "MIT"
name = "aof"
readme = "README.md"
version = "0.2.0"
homepage = "https://github.com/bosondata/aof-rs"
repository = "https://github.com/bosondata/aof-rs"

[dependencies]
clap = "2.22"
regex = "0.2"
resp = "1.0"

[features]
unstable = []
