[package]
authors = ["messense <messense@icloud.com>"]
description = "Redis appendonly file filter"
homepage = "https://github.com/bosondata/aof-rs"
keywords = ["Redis", "appendonly"]
license = "MIT"
name = "aof"
readme = "README.md"
repository = "https://github.com/bosondata/aof-rs"
version = "0.3.1"

[dependencies]
clap = "2.31"
regex = "0.2"
resp = "1.0"

[features]
nightly = ["unstable"]
unstable = ["regex/unstable"]
